<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CadastroUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/nome"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editCadNome"
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editCadEmail"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailHint"
                    android:inputType="textEmailAddress" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/senha"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editCadSenha"
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/confirmar_senha"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editCadConfimarSenha"
                    android:layout_width="194dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <Button
                android:id="@+id/btnCad"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_customizado"
                android:text="@string/cadastrar"
                android:textColor="@android:color/background_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/imageVoltar"
                    android:layout_width="37dp"
                    android:layout_height="27dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_red_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.048"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.982"
                    app:srcCompat="?attr/homeAsUpIndicator" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="Voltar"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>