<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_login"
                android:layout_width="112dp"
                android:layout_height="117dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_supermarket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="31dp" />

            <LinearLayout
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    app:layout_constraintVertical_bias="0.728" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="254dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="Digite seu email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textSize="14sp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="0.111" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSenha"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/senha"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    app:layout_constraintVertical_bias="0.728" />

                <EditText
                    android:id="@+id/editSenha"
                    android:layout_width="254dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="Digite sua senha"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textSize="14sp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="0.111" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_customizado"
                android:text="@string/entrar"
                android:textColor="@android:color/background_light"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintVertical_bias="0.24" />

            <TextView
                android:id="@+id/findSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ESQUECEU A SENHA?"
                android:textColor="#0011cc"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/txtCadastro"
                android:layout_width="193dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/askCadastro"
                android:textColor="@android:color/background_dark"
                android:textSize="14dp"
                app:layout_constraintHorizontal_bias="0.502"/>

            <Button
                android:id="@+id/btnCadastro"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/btn_laranja"
                android:text="@string/primeiroCadastro"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent" />




        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>